fdo#41068: writerfilter: fix image wrap polygon import

Mainly the problem seems to be that Stein's GCD algorithm requires
non-negative input parameters, and the document has this:
 <wp:lineTo x="-480" y="6104"/>

(regression from 86898639d4144a078ed295d0a8bef406868802cb)

Change-Id: I8da1272c3caae84f43472aa4acb65ed66dfbd8ae
(cherry picked from commit f8307e5ae11e8235fa1fb88ed52625bf9c650dc2)
Reviewed-on: https://gerrit.libreoffice.org/5700
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>